--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ test_modules/sample_output/test_handkerchief.mid
 test_modules/sample_output/test_raven.mid
 test_modules/text_processing/__pycache__/
 restructure/rhymesToMusic/parseTextAsMusic/__pycache__
+test_modules/sample_output/10things_major.mid
+test_modules/sample_output/measure1.mid
